--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h1>TUĞBA IŞIK</h1>
+<!--h1 büyük başık
+h2alt başlık
+p paragraf
+-->
 <H2>Hakkımda</H2>
 <p>Merhaba ben Tuğba Işık. Ordu'da yaşıyorum. Türk Dili ve Edebiyatı mezunuyum. Üniversiteyi bitirdikten sonra yazılıma merak saldım. Bu alanda kendimi geliştirmeye karar verdim.</p>
 <h1>SEVDİĞİM FİLİMLER</h1>
