index.html düzenlendi

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@ h2alt başlık
 p paragraf
 -->
 <H2>Hakkımda</H2>
-<p>Merhaba ben Tuğba Işık. Ordu'da yaşıyorum. Türk Dili ve Edebiyatı mezunuyum. Üniversiteyi bitirdikten sonra yazılıma merak saldım. Bu alanda kendimi geliştirmeye karar verdim.</p>
-<h1>SEVDİĞİM FİLİMLER</h1>
-<H2>TAU</H2>
-<P>Tau, yönetmenliğini Federico D'Alessandro'nun üstlendiği 2018 yılı yapımı yapay zekayı konu edinen bir bilim kugu-gerilim filmidir.</P>
-<h2>Harry Potter ve Felsefe Taşı</h2>
-<p>Harry Potter ve Felsefe Taşı, 2001 yapımı yönetmenliğini David Heyman'ın üstlendiği fantastik bir filimdir.</p>
+<p>Merhaba ben Tuğba Işık. Ordu'da yaşıyorum. Türk Dili ve Edebiyatı mezunuyum. Üniversiteyi bitirdikten sonra yazılıma
+    merak saldım. Bu alanda kendimi geliştirmeye karar verdim.</p>
+<h2>İlgi Alanlarım</h2>
+<div>
+    <ol>
+        <li>Film
+            <ul>
+                <li><a href="https://www.imdb.com/title/tt4357394/?ref_=fn_al_tt_1">Tau</a></li>
+                <li>Blak Panter</li>
+                <li>Harry Potter ve Felaefe Taşı</li>
+            </ul>
+        </li>
+        <li>
+            Dizi
+            <ul>
+                <li>Gönül Dağı</li>
+                <li><a href="https://www.imdb.com/title/tt2361816/?ref_=tt_mv_close">Seksenler</a></li>
+                <li>Stranger Things</li>
+            </ul>
+        </li>
+        <li>
+            Kitap
+            <ul>
+                <li>
+                    <a
+                        href="https://www.goodreads.com/book/show/13505323-zaman-ark#:~:text=Hayat%C4%B1%20%C3%BC%C3%A7%20y%C3%BCz%20y%C4%B1l%20%C3%B6nce,d%C3%BCnya%20i%C3%A7in%20%E2%80%93%20hayal%20bile%20edemez.">Zaman
+                        Çarkı</a>
+                </li>
+                <li>Yerdeniz</li>
+                <li>Merlin</li>
+            </ul>
+        </li>
+    </ol>
+</div>
+<h1>Sevdiğim Kitaplar</h1>
+<h2>Yerdeniz</h2>
+<img src="https://cdn.cimri.io/image/1000x1000/yerdeniz-6-kitap-tek-cilt-ursula-kroeber-le-guin-ursula-k-leguin_92994378.jpg" alt="Yerdeniz" width="300">
+<p>Kara deliğin içinde;küçük,oyuncu ışık toplarının peşinde...</p>
+
